LUCENE-7743: Avoid calling new String(String).